app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Baskervville&family=Poppins&family=Raleway:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Petit+Formal+Script&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;



@font-face {
  font-family: "latosce";
  src: url("/fonts/latosce.ttf") format("truetype");
}
@font-face {
  font-family: "neue-haas";
  src: url("/fonts/NeueHaasDisplayThin.ttf") format("truetype");
}
@font-face {
  font-family: "neue-haas-medium";
  src: url("/fonts/NeueHaasDisplayMediu.ttf") format("truetype");
}

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  padding: 1rem 1rem;
  background-color: #F6F6F6;
}

.main{
  margin-bottom: 10vh;
  height: 10vh;
  position: relative;
}

.sliderContainer{
  position: absolute;
  top: 0;
}

.slider{
  position: relative;
  white-space: nowrap;
  display: flex;
  gap: 50px;
  
}

.slider p{
  margin: 0px;
  color: #111111;
  font-size: 150px;
  font-weight: 400;
  font-family: lactosce;
}

.slider p:nth-of-type(2){
  position: absolute;
  left: 100%;
}

@media (max-width: 768px) {
  body {
    padding: 1rem;
  }

  .slider p{
    margin: 0px;
    color: #111111;
    font-size: 50px;
    font-weight: 400;
    font-family: lactosce;
  }

  .main{
    margin-bottom: 0;
    height: 2vh;
    position: relative;
  }

  #scrolling-section {
    display: none;
  }

  #dune-image {
    width: 250px;
  }

  #picnic-image {
    display: none;
  }

  #down-arrow {
    display: none;
  }

  #warped-hero {
    display: none;
  }

  #documentary-list-image{
    display: none;
  }

  #gallery-card {
    background-image: url('https://images.pexels.com/photos/3692639/pexels-photo-3692639.jpeg');
    background-size: cover;
    background-repeat: no-repeat;
  }

  #gallery-card h1 {
    display: none;
  }

  

  /* #gallery-card-number {
    display: none;
  } */
}

@media (min-width: 1024px) {
  #work-sub-heading {
    display: none;
  }
  #gallery-card h2 {
    opacity: 0;
  }

  #gallery-card:hover h2 {
    opacity: 1;
  }

  /* #warped-hero-small {
    display: none;
  } */
 
}

@media (min-width: 1500px) {
  body {
    padding: 2rem 15rem;
  }
}

